Exc5/network-policies.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-front-back
  namespace: default
spec:
  podSelector:
    matchLabels:
      role: back-end
  policyTypes:
  - Ingress
  ingress:
  - from:
      - podSelector:
          matchLabels:
            role: front-end
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-back-front
  namespace: default
spec:
  podSelector:
    matchLabels:
      role: front-end
  policyTypes:
  - Ingress
  ingress:
  - from:
      - podSelector:
          matchLabels:
            role: back-end
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-admin-front-back
  namespace: default
spec:
  podSelector:
    matchLabels:
      role: admin-back-end
  policyTypes:
  - Ingress
  ingress:
  - from:
      - podSelector:
          matchLabels:
            role: admin-front-end
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-admin-back-front
  namespace: default
spec:
  podSelector:
    matchLabels:
      role: admin-front-end
  policyTypes:
  - Ingress
  ingress:
  - from:
      - podSelector:
          matchLabels:
            role: admin-back-end
